--- a/css/styles.css
+++ b/css/styles.css
@@ -13,16 +13,25 @@
   --container-width: 90vw;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   font-family: 'Catamaran', sans-serif;
   line-height: 1.6;
-  font-size: 1.1rem;
+  font-size: 18px;
 }
 
 .nav {
   background: none;
   box-shadow: none;
   padding-top: 2em;
+}
+
+.material-icons {
+  color: #000;
+  margin-left: -.8em;
 }
 
 .container {
@@ -101,6 +110,7 @@ h1 {
   background-image: url(../img/banner.jpg);
   background-size: cover;
   background-attachment: fixed;
+  background-position: center;
 }
 
 .overlay {
@@ -169,4 +179,178 @@ h1 {
 
 .carousel .carousel-item h5 {
   text-align: center;
+}
+
+.skew {
+  margin-top: 20rem;
+}
+
+.our-drummers {
+  background-color: #000;
+}
+
+.our-drummers h2 {
+  text-align: center;
+  color: #fff;
+  margin-top: -.2em;
+}
+
+.gallery {
+  margin-top: 5em;
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+}
+
+.gallery a:first-child {
+  grid-row: 1/3;
+  grid-column: 1/3;
+}
+
+.gallery a:nth-child(2) {
+  grid-column: 3/5;
+}
+
+.gallery a,
+.gallery img {
+  width: 100%;
+  height: 100%;
+}
+
+.contact {
+  background-image: url(../img/contact-banner.png);
+  background-size: cover;
+  background-attachment: fixed;
+  color: #fff;
+  width: 100vw;
+  margin-top: -2.4rem;
+}
+
+
+.container-form {
+  padding: 5em 3em;
+  width: 40%;
+  display: flex;
+  flex-direction: column;
+}
+
+.container-form textarea {
+  height: 15em;
+  color: #fff;
+  padding: 1em;
+}
+
+.container-form button {
+  margin-top: 1em;
+}
+
+.footer {
+  background-color: #000;
+  color: #fff;
+  padding: 4rem 0;
+}
+
+.footer h2 {
+  text-align: center;
+}
+
+.footer .container {
+  display: flex;
+  justify-content: space-between;
+}
+
+.social-media .fab {
+  margin-right: 20px;
+  font-size: 2em;
+  color: var(--alt-color);
+}
+
+.social-media .fab:hover,
+.info a:hover,
+.blog a:hover {
+  color: var(--primary-color);
+}
+
+.info a,
+.blog a {
+  color: var(--alt-color);
+}
+
+@media screen and (max-width: 1020px) {
+  h1 {
+    font-size: 3rem;
+  }
+
+  .absolute-title h3 {
+    font-size: 7rem;
+  }
+
+  .overlay-section .overlay h2 {
+    font-size: 2.5rem;
+  }
+  
+  .carousel .carousel-item img {
+    width: 500px;
+    height: 400px;
+  }
+
+  .container-form {
+    padding: 5em 3em;
+    width: 55%;
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .container-form textarea {
+    height: 15em;
+    color: #fff;
+    padding: 1em;
+  }
+}
+
+@media screen and (max-width: 920px) {
+  .absolute-title h3 {
+    display: none;
+  }
+
+  .main-info .container {
+    grid-template-columns: repeat(1, 1fr);
+    height: auto;
+    padding-bottom: 3em;
+    margin-top: 3em;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .main-info .container {
+    display: flex;
+    flex-direction: column-reverse;
+  }
+
+  .footer h3,
+  .info h3,
+  .blog h3 {
+    font-size: 1.5em;
+  } 
+}
+
+@media screen and (max-width: 600px) {
+  .gallery {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .container-form {
+    width: 60%;
+  }
+
+  .social-media {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .social-media .fab {
+    font-size: 1.2em;
+    margin-top: .5em;
+  }
 }
